--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 
     "description": "Quick Tab Switcher",
     "manifest_version": 2,
-    "name": "tabist",
+    "name": "Tabist",
     "version": "0.1",
     "homepage_url": "https://github.com/fiveNinePlusR/tabist",
     "icons": {
