--- a/tabist/manifest.json
+++ b/tabist/manifest.json
@@ -10,8 +10,9 @@
     },
 
     "permissions": [
-        "tabs",
-        "storage"
+      "tabs",
+      "storage",
+      "downloads"
     ],
 
   "background": {
