--- a/tabist/manifest.json
+++ b/tabist/manifest.json
@@ -6,7 +6,7 @@
     "version": "0.1.3",
     "homepage_url": "https://github.com/fiveNinePlusR/tabist",
     "icons": {
-        "48": "icons/page-48.png"
+        "48": "icons/page-48_white.png"
     },
 
     "permissions": [
@@ -18,7 +18,7 @@
   },
 
   "browser_action": {
-      "default_icon": "icons/page-32.png"
+      "default_icon": "icons/page-32_white.png"
   }
 
 }
