Adds Tabist as a sidebar action.

--- a/tabist/manifest.json
+++ b/tabist/manifest.json
@@ -23,6 +23,12 @@
       "default_icon": "icons/page-32_white.png"
   },
 
+  "sidebar_action": {
+    "default_icon": "icons/page-32_white.png",
+    "default_title" : "Tabist",
+    "default_panel": "tabs.html"
+  },
+
   "commands": {
       "toggle-tabist": {
           "suggested_key": {
