--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "dependencies": {
     "baconjs": "^0.7.85",
     "gulp": "^3.9.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1"
+    "react": "^16.3.1",
+    "webpack": "^4.5.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "baconjs": "^0.7.87",
     "css-loader": "^0.25.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1"
+    "webpack-cli": "^2.0.14"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --display-error-details -w",
+    "lint": "web-ext lint"
   },
   "repository": {
     "type": "git",
