mostly parity with old method

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "underscore": "^1.9.0",
+    "webextension-polyfill": "^0.2.1",
     "webpack": "^4.5.0"
   },
   "devDependencies": {
