--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "webpack": "^4.5.0"
   },
   "devDependencies": {
+    "@types/underscore": "^1.8.8",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
